<resources>
    <string name="app_name">Swooh</string>
    <string name="background_image">background image</string>
    <string name="logo_image">Logo image</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="get_started">GET STARTED</string>
    <string name="find_a_team_in_your_city">Find A Team In Your City</string>
    <string name="app_image">app image</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">MENS</string>
    <string name="womens">WOMENS</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">Next</string>
    <string name="ground_image">ground image</string>
    <string name="back_image">back image</string>
    <string name="logoimage">logoimage</string>
    <string name="finish">FINISH</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="i_am_a">I am a</string>
    <string name="search_league">Looking For a Co-Ed Beginner Near You</string>
    <string name="finish_image">finish_image</string>
</resources>
