<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillsActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/back_image"/>

    <ImageView
            android:layout_width="146dp"
            android:layout_height="54dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.497"
            android:contentDescription="@string/back_image"
    />
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/finishBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/swooh_button" android:textSize="24sp"
            android:textColor="@android:color/background_light" android:onClick="onSkillFinishCkecked"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintHorizontal_bias="0.6" android:layout_marginTop="55dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerSkillBtn" android:layout_weight="1"
                android:background="@drawable/swooh_toggle" android:textColor="@android:color/background_light"
                android:textSize="18sp" android:textOff="@string/beginner"
                android:textOn="@string/beginner"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:onClick="onBeginnerChecked"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerSkillBtn" android:layout_weight="1"
                android:background="@drawable/swooh_toggle" android:textColor="@android:color/background_light"
                android:textSize="18sp" android:textOff="@string/baller" android:textOn="@string/baller"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:onClick="onBallerChecked"/>
    </LinearLayout>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="150dp"
            android:layout_height="34dp"
            android:id="@+id/textView4" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:textColor="@android:color/background_light" android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.489"
            android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>